Set  max-width to 500px to prevent bad wrapping on Desktop

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .intro {
   padding-top: 40px;
-  max-width: 600px;
+  max-width: 500px;
   margin: auto;
   text-align: center;
 }
